@@ -6,12 +6,6 @@ source_dirs="
 /var/www/hg/
 /var/www/project_docs/
 "
-
-LOG="/var/log/`basename $0`.log"
-
-echo "-----------------------------------------------------------" >> $LOG
-echo "`date` : Script started" >> $LOG
-
 sudo network-config -ta Internet
 
 # Update repos
@@ -27,16 +21,11 @@ mysqldump -uroot redmine > /tmp/redmine.sql
 
 for f in ${source_dirs}
 do
-    echo "`date` : Syncing ${f} " >> $LOG
-    rsync -avz --delete --progress ${f} ${MYSERVER}:${f}
+    echo "`date` : Syncing ${f} "
+    rsync -az --delete --progress ${f} ${MYSERVER}:${f}
 done
 
-echo "`date` : Running update on remote machine" >> $LOG
+echo "`date` : Running update on remote machine"
 ssh ${MYSERVER} $HOME/scripts/scripty/redmine/update_redmine_on_server.sh
 
 sudo network-config -ta LAN
-
-echo "`date` : Script finished" >> $LOG
-
-
-
